[package]
name = "lunes"
description = "🕹 CLI Manager for Lunes Full-Node write in Rust"
version = "0.7.0"
edition = "2021"
homepage = "https://github.com/lunes-platform/lunes-cli"
authors = ["Lucas Oliveira <olivmath@protonmail.com>"]
license-file = "LICENSE"

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
human-panic = "1.0.3"
lunesweb = "0.3.0"
tokio = "1.19.2"
trauma = "2"
